# src/controllers/handlers/user-moderation/ban-player-handler.ts
@@ -21,7 +21,14 @@ export async function banPlayerHandler(
     const body = (await request.json()) as BanPlayerRequestBody
     const bannedBy = verification!.auth
 
-    const ban = await userModeration.banPlayer(address, bannedBy, body.reason, body.duration, body.customMessage)
+    const ban = await userModeration.banPlayer(
+      address,
+      bannedBy,
+      body.reason,
+      body.duration,
+      body.customMessage,
+      body.banIp
+    )
 
     return {
       status: 201,
