# src/controllers/handlers/user-moderation/schemas.ts
@@ -4,6 +4,7 @@ export type BanPlayerRequestBody = {
   reason: string
   duration?: number
   customMessage?: string
+  banIp?: boolean
 }
 
 export type WarnPlayerRequestBody = {
@@ -25,6 +26,9 @@ export const BanPlayerSchema: Schema = {
     },
     customMessage: {
       type: 'string'
+    },
+    banIp: {
+      type: 'boolean'
     }
   }
 }
